[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/Aemia.png" type="Texture" id=1]
[ext_resource path="res://scripts/Aemia.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 8 )

[sub_resource type="CircleShape2D" id=12]
radius = 77.0065

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[sub_resource type="OccluderPolygon2D" id=4]
cull_mode = 1
polygon = PoolVector2Array( -8, -8, 8, -8, 8, 8, -8, 8 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.820513, 1 )
colors = PoolColorArray( 0.332031, 0.151749, 0.244707, 1, 0.15625, 0.0390625, 0.0390625, 1, 0.113725, 0, 0, 0.54902 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=10]
max_value = 2.0
_data = [ Vector2( 0, 0.995454 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 182.93
angular_velocity = 140.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[node name="Aemia" type="KinematicBody2D"]
script = ExtResource( 2 )
damage_amount = 25
max_speed = 100.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HurtHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtHitbox"]
shape = SubResource( 1 )

[node name="DamageHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHitbox"]
position = Vector2( 4, 0 )
shape = SubResource( 3 )

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 15.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Blood" type="Particles2D" parent="."]
emitting = false
amount = 12
lifetime = 0.4
one_shot = true
speed_scale = 1.72
explosiveness = 0.69
local_coords = false
process_material = SubResource( 11 )

[connection signal="area_entered" from="DamageHitbox" to="." method="_on_DamageHitbox_area_entered"]
[connection signal="area_entered" from="DetectionRange" to="." method="_on_DetectionRange_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
